[gd_scene load_steps=14 format=4 uid="uid://cb3yvr2emt4vl"]

[ext_resource type="Texture2D" uid="uid://boi6xgxvtaond" path="res://assets/Sprout Lands - Sprites - Basic pack/Tilesets/Grass.png" id="1_wt17y"]
[ext_resource type="Texture2D" uid="uid://cnlxrfsmn01hd" path="res://icon.svg" id="2_m8u5f"]
[ext_resource type="Script" uid="uid://ccwx341mwjp5t" path="res://player.gd" id="3_m8u5f"]
[ext_resource type="Shader" uid="uid://cxwge85n3nfk6" path="res://todog.gdshader" id="4_is3ju"]
[ext_resource type="Script" uid="uid://3hqw6nqfg7et" path="res://todog.gd" id="5_o00ia"]
[ext_resource type="Script" uid="uid://d0u5m3ebo344v" path="res://move_manager.gd" id="6_4bqqs"]
[ext_resource type="Script" uid="uid://dtnru84u5prxe" path="res://james.gd" id="6_v7dth"]
[ext_resource type="Script" uid="uid://bjlvykkikidtk" path="res://game_manager.gd" id="7_ynsuh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_is3ju"]
texture = ExtResource("1_wt17y")
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSet" id="TileSet_edjgo"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_is3ju")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o00ia"]
shader = ExtResource("4_is3ju")

[sub_resource type="Shader" id="Shader_ynsuh"]
code = "shader_type canvas_item;

void vertex() {
	VERTEX = VERTEX * mat2(vec2(1.0, 1.0), vec2(1.0, -1.0));
}

void fragment() {
	COLOR = COLOR * vec4(1.0, 1.0, 0.0, 1.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v7dth"]
shader = SubResource("Shader_ynsuh")

[node name="Playground" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAABAAEAAAABAAAAAAACAAEAAAABAAAAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAACAAQAAAABAAEAAAADAAUAAAABAAIAAAAEAAUAAAABAAIAAAAEAAQAAAABAAEAAAAEAAMAAAABAAEAAAACAAMAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAABAAIAAAABAAEAAAACAAIAAAABAAEAAAADAAEAAAABAAAAAAAEAAIAAAABAAEAAAAEAAEAAAABAAAAAAAAAAQAAAAAAAEAAAACAAUAAAABAAIAAAABAAUAAAABAAIAAAAAAAUAAAAAAAIAAAAFAAIAAAABAAEAAAAGAAIAAAABAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAGAAQAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAGAAMAAAABAAEAAAAFAAEAAAABAAAAAAAGAAEAAAABAAAAAAAHAAEAAAACAAAAAAAFAAUAAAABAAIAAAAGAAUAAAABAAIAAAAHAAUAAAACAAIAAAA=")
tile_set = SubResource("TileSet_edjgo")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(24, 40)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_m8u5f")
script = ExtResource("3_m8u5f")

[node name="todoG" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_o00ia")
position = Vector2(103.99999, 72)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_m8u5f")
script = ExtResource("5_o00ia")

[node name="JaMeS" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_v7dth")
position = Vector2(88, 88)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_m8u5f")
script = ExtResource("6_v7dth")

[node name="MoveManager" type="Node" parent="."]
script = ExtResource("6_4bqqs")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("7_ynsuh")

[node name="GameOverLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 7.0
offset_top = 34.0
offset_right = 119.0
offset_bottom = 78.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[shake rate=20.0 level=5 connected=1]GAME OVER[/shake]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 7.0
offset_top = 34.0
offset_right = 119.0
offset_bottom = 78.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[shake rate=20.0 level=20 connected=1]WIN[/shake]"
horizontal_alignment = 1
vertical_alignment = 1
